WIAPASCAL CHANGE LOG
======================

2024/10/
        31 Columns width adjustments in SelectForm
        30 Delphi Compatibility
        29 TWIADevice.GetProperty Process only WIA Types, added all Arrays/Ranges;
	   Changed names from PaperSize to PaperType;
	   Added functions THInchToSize/Str in PaperSizes;
	   Added Custom Paper Size in WIADevice and in SettingsForm;
	   Added Panels for PaperAlign/Size in SettingsForm.
        28 Added PIWiaItem2 as array of IWIAItem2;
           Changed interface IWIAItem2.DeviceDlg declaration;
           Changed DownloadNativeUI method
        25 Added Item Category;
	   First Test with Native UI;
	   Changed some Const Names.
        24 Use always pWiaTransfer.Download(0, Self) until further tests;
           Changed some var names in SettingsForm; 
           Added UseNativeUI and WIACaps Array in SettingsForm
        23 Added PaperAlign and SetParams method; 
	   Updated SetPaperSize; 
	   Added PaperAlign and changed Orentation Icons in SettingsForm.
	   Added AExt and AFormat in Download Method; 
	   Added Download_xxx properties;
	   Added Progress Status in Demo.
        21 Added Rotation and PaperLandscape;
           Renamed WiaImageFormat to WiaImageFormatGUID and Added ImageFormat Descriptions;
           Renamed all TWia types to TWIA Uppercase;
           Added PaperLandscape in SettingsForm;
        19 Added TWIAItemTypes and relative Convert Function;
	   Changed Download method for ProgrammableDataSource is alway 0;
	   Added WiaItemTypeTwainCompatibility in WiaDef.
           Added EnumAll property in WIAManager; 
           Added EnumerateDevices in WIAManager.GetDevice;
           Moved creation of IWiaDevMgr2 inside EnumerateDevices;
	   Select Form Show No Wia Error inside FillList
        18 Re EnumerateItems in TWIADevice.SetSelectedItemIndex;
	   Commented BitDepth part so we use only DataType;
	   SettingsForm with all Items (must be tested)